--- a/src/html/news_scroll.html
+++ b/src/html/news_scroll.html
@@ -362,6 +362,28 @@
                 <canvas id="chart-1"></canvas>
               </div>
             </div>
+            <div class="row effect">
+              <div class="effect-add">
+                <h2>ADD Team</h2>
+                <p>
+                  <br>
+                  RCSB 업데이트 자료로 1700T에 포함되지 않았던 화합물 구조 확보
+                  <br><br>
+                  DeepMatcher의 스크리닝 대상 확장
+                  <br>
+                  구조의 Action mode 확인을 통해 적합한 모델 생성
+                </p>
+              </div>
+              <div class="effect-adsp">
+                <h2>ADSP Team</h2>
+                <p>
+                  <br>
+                  최근 RCSB 업데이트 구조 확인
+                  <br><br>
+                  연구 트렌드 파악 및 빠른 연구 개발 가능
+                </p>
+              </div>
+            </div>
             <div class="col rrd-data">
               <h2>Data Table</h2>
               <table id="rrd-data-col">
@@ -375,55 +397,138 @@
                   </tr>
                 </thead>
               </table>
-              <table id="rrd-data-data">
-                <tbody>
-                  <tr>
-                    <td>data</td>
-                    <td>data</td>
-                    <td>data</td>
-                    <td>data</td>
-                    <td>data</td>
-                  </tr>
-                  <tr>
-                    <td>data</td>
-                    <td>data</td>
-                    <td>data</td>
-                    <td>data</td>
-                    <td>data</td>
-                  </tr>
-                  <tr>
-                    <td>data</td>
-                    <td>data</td>
-                    <td>data</td>
-                    <td>data</td>
-                    <td>data</td>
-                  </tr>
-                  <tr>
-                    <td>data</td>
-                    <td>data</td>
-                    <td>data</td>
-                    <td>data</td>
-                    <td>data</td>
-                  </tr>
-                  <tr>
-                    <td>data</td>
-                    <td>data</td>
-                    <td>data</td>
-                    <td>data</td>
-                    <td>data</td>
-                  </tr>
-                </tbody>
-              </table>
+              <div class="rrd-table-wrapper">
+                <table id="rrd-data-data">
+                  <tbody>
+                    <tr>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                    </tr>
+                    <tr>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                    </tr>
+                    <tr>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                    </tr>
+                    <tr>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                    </tr>
+                    <tr>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                    </tr>
+                    <tr>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                    </tr>
+                    <tr>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                    </tr>
+                    <tr>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                    </tr>
+                    <tr>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                    </tr>
+                    <tr>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                    </tr>
+                    <tr>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                    </tr>
+                    <tr>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                      <td>data</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
             </div>
           </div>
         </div>
       </div>
       <div class="section">
-        <div class="page-4"></div>
+        <div class="col page-4">
+          <div class="title-4">
+            <h1>DeepMatcher modeling Target</h1>
+          </div>
+          <div class="row chart-per-month-wrapper">
+            <div class="chart-per-month-chart">
+              <canvas></canvas>
+            </div>
+            <div class="col chart-per-month-option">
+              <div class="row choose-month">
+                <input type="button" value="All">
+                <input type="button" value="Jan">
+                <input type="button" value="Feb">
+                <input type="button" value="Mar">
+                <input type="button" value="Apr">
+                <input type="button" value="May">
+              </div>
+              <input type="button" value="Chart per family">
+              <input type="button" value="Chart">
+              <input type="button" value="Chart">
+              <input type="button" value="Chart">
+            </div>
+          </div>
+          <div class="col status-view-wrapper">
+            <h2>Status View</h2>
+          </div>
+          <div class="row data-download-wrapper">
+            <div class="data-download">
+              <h2>Download Data</h2>
+              1. 2. 3. 4.
+            </div>
+          </div>
+        </div>
       </div>
-      <!-- <div class="section">
+      <div class="section">
         <div class="page-5"></div>
-      </div> -->
+      </div>
     </div>
   </body>
   <!-- jquery -->
