--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="row navigator">
-        <a href="./index.html">
+        <a href="index.html">
           <img src="img/ModelOfDeepMatcher_logo.png" alt="" />
         </a>
         <div class="title">
