--- a/html/news.html
+++ b/html/news.html
@@ -20,45 +20,50 @@
       <div class="title">
         <h1>RCSB Released Data</h1>
       </div>
-      <div class="col rrd-text">
+      <div class="col main">
         <div class="row rrd-text-wrapper">
           <div class="rrd-text">
-            <h3>Process</h3>
-            <p>
-              1. RCSB에 매일 업데이트 되는 구조를 Protein, Homo Sapiens 기준으로
-              확인 및 정리
-              <br />
-              <br />
-              2. 업데이트되는 데이터를 월별로 1700T 중복, ligand 결합 등을 확인
-              <br />
-              <br />
-              3. 정리된 자료들을 도식화 및 데이터베이스 생성
-            </p>
+            <div class="process">
+              <h3>Process</h3>
+              <h5>hover</h5>
+              <div class="process-hide">
+                <p>
+                  1. RCSB에 매일 업데이트 되는 구조를 Protein, Homo Sapiens 기준으로 확인 및 정리
+                  <br />
+                  2. 업데이트되는 데이터를 월별로 1700T 중복, ligand 결합 등을
+                  확인
+                  <br />
+                  3. 정리된 자료들을 도식화 및 데이터베이스 생성
+                </p>
+              </div>
+            </div>
+            <div class="row effect">
+              <div class="effect-add">
+                <h2>ADD Team</h2>
+                <p>
+                  <br />
+                  RCSB 업데이트 자료로 1700T에 포함되지 않았던
+                  <br />
+                  화합물 구조 확보
+                  <br /><br />
+                  DeepMatcher의 스크리닝 대상 확장
+                  <br />
+                  구조의 Action mode 확인을 통해 적합한 모델 생성
+                </p>
+              </div>
+              <div class="effect-adsp">
+                <h2>ADSP Team</h2>
+                <p>
+                  <br />
+                  최근 RCSB 업데이트 구조 확인
+                  <br /><br />
+                  연구 트렌드 파악 및 빠른 연구 개발 가능
+                </p>
+              </div>
+            </div>
           </div>
           <div class="chart-1-wrapper">
             <canvas id="chart-1"></canvas>
-          </div>
-        </div>
-        <div class="row effect">
-          <div class="effect-add">
-            <h2>ADD Team</h2>
-            <p>
-              <br />
-              RCSB 업데이트 자료로 1700T에 포함되지 않았던 화합물 구조 확보
-              <br /><br />
-              DeepMatcher의 스크리닝 대상 확장
-              <br />
-              구조의 Action mode 확인을 통해 적합한 모델 생성
-            </p>
-          </div>
-          <div class="effect-adsp">
-            <h2>ADSP Team</h2>
-            <p>
-              <br />
-              최근 RCSB 업데이트 구조 확인
-              <br /><br />
-              연구 트렌드 파악 및 빠른 연구 개발 가능
-            </p>
           </div>
         </div>
         <div class="col rrd-data">
@@ -68,7 +73,7 @@
               <tr>
                 <th>PDB</th>
                 <th>Gene Name</th>
-                <th>Mutatant Type</th>
+                <th>Mutant Type</th>
                 <th>Uniprot ID</th>
                 <th>Ligand</th>
                 <th>Ligand MW</th>
@@ -77,11 +82,11 @@
           </table>
           <div class="rrd-table-wrapper">
             <table id="rrd-data-data">
-              <tbody>
-              </tbody>
+              <tbody></tbody>
             </table>
           </div>
         </div>
+        <div class="service"></div>
       </div>
     </div>
   </body>
