--- a/html/news.html
+++ b/html/news.html
@@ -86,7 +86,43 @@
             </table>
           </div>
         </div>
-        <div class="service"></div>
+        <div class="row service-wrapper">
+          <div class="col service">
+            <div class="row down">
+              <h3>Download Raw File</h3>
+              <span>Hover</span>
+              <div class="row down-hide">
+                <a href="" download="">download</a>
+                <select name="" id="">
+                  <option value="" selected>-</option>
+                  <option value=""><a href="">All Data</a></option>
+                  <option value=""><a href="">Jan 2023</a></option>
+                  <option value=""><a href="">Feb 2023</a></option>
+                  <option value=""><a href="">Mar 2023</a></option>
+                  <option value=""><a href="">Apr 2023</a></option>
+                  <option value=""><a href="">May 2023</a></option>
+                  <option value=""><a href="">Jun 2023</a></option>
+                </select>
+              </div>
+            </div>
+            <div class="row something">
+              <a href="" download="">Somethig contents</a>
+              <span>Hover</span>
+              <div class="row something-hide">
+                <input type="checkbox"><span>1</span>
+                <input type="checkbox"><span>2</span>
+                <input type="checkbox"><span>3</span>
+              </div>
+            </div>
+          </div>
+          <div class="">
+            <h1>Chart section</h1>
+          </div>
+          <div class="">
+          <br>
+            <h1>Other section</h1>
+          </div>
+        </div>
       </div>
     </div>
   </body>
