--- a/html/news.html
+++ b/html/news.html
@@ -115,11 +115,10 @@
               </div>
             </div>
           </div>
-          <div class="">
+          <div class="col chart-section">
             <h1>Chart section</h1>
           </div>
-          <div class="">
-          <br>
+          <div class="col other-section">
             <h1>Other section</h1>
           </div>
         </div>
