--- a/html/news.html
+++ b/html/news.html
@@ -93,7 +93,7 @@
               <span>Hover</span>
               <div class="row down-hide">
                 <a href="" download="">download</a>
-                <select name="" id="">
+                <select name="" id="select-data">
                   <option value="" selected>-</option>
                   <option value=""><a href="">All Data</a></option>
                   <option value=""><a href="">Jan 2023</a></option>
