--- a/html/news.html
+++ b/html/news.html
@@ -114,6 +114,12 @@
                 <input type="checkbox"><span>3</span>
               </div>
             </div>
+            <div class="row QnA">
+              <a href="" download="">Q & A</a>
+              <div class="row QnA-hide">
+                <p>You can request inquiries about RCSB Released Data.</p>
+              </div>
+            </div>
           </div>
           <div class="col chart-section">
             <h1>Chart section</h1>
