--- a/html/news.html
+++ b/html/news.html
@@ -114,10 +114,13 @@
                 <input type="checkbox"><span>3</span>
               </div>
             </div>
-            <div class="row QnA">
+            <div class="row QnA" onclick="QnAOpenPopup()">
               <a href="" download="">Q & A</a>
               <div class="row QnA-hide">
                 <p>You can request inquiries about RCSB Released Data.</p>
+              </div>
+              <div class="QnA-popup">
+
               </div>
             </div>
           </div>
