--- a/html/news.html
+++ b/html/news.html
@@ -62,8 +62,8 @@
               </div>
             </div>
           </div>
-          <div class="chart-1-wrapper">
-            <canvas id="chart-1"></canvas>
+          <div class="main-chart-wrapper">
+            <canvas id="main-chart"></canvas>
           </div>
         </div>
         <div class="col rrd-data">
@@ -114,18 +114,26 @@
                 <input type="checkbox"><span>3</span>
               </div>
             </div>
-            <div class="row QnA" onclick="QnAOpenPopup()">
+            <div class="row QnA">
               <a href="" download="">Q & A</a>
+              <span onclick="QnAOpenPopup()">Click</span>
               <div class="row QnA-hide">
                 <p>You can request inquiries about RCSB Released Data.</p>
               </div>
-              <div class="QnA-popup">
-
+              <div class="col QnA-popup">
+                <div class="QnA-popup-close" onclick="QnAOpenPopupClose()"></div> 
+                <div class="QnA-popup-input">
+                  <textarea name="" id="" cols="30" rows="10" wrap="physical"></textarea>
+                </div>
+                <input id="QnA-popup-submit" type="button" value="submit">
               </div>
             </div>
           </div>
           <div class="col chart-section">
             <h1>Chart section</h1>
+            <div class="chart-1">
+              
+            </div>
           </div>
           <div class="col other-section">
             <h1>Other section</h1>
