--- a/html/news.html
+++ b/html/news.html
@@ -23,18 +23,42 @@
       <div class="col main">
         <div class="row rrd-text-wrapper">
           <div class="rrd-text">
-            <div class="process">
-              <h3>Process</h3>
-              <h5>hover</h5>
-              <div class="process-hide">
-                <p>
-                  1. RCSB에 매일 업데이트 되는 구조를 Protein, Homo Sapiens 기준으로 확인 및 정리
-                  <br />
-                  2. 업데이트되는 데이터를 월별로 1700T 중복, ligand 결합 등을
-                  확인
-                  <br />
-                  3. 정리된 자료들을 도식화 및 데이터베이스 생성
-                </p>
+            <div class="row">
+              <div class="process">
+                <h3>Process</h3>
+                <h5>hover</h5>
+                <div class="process-hide">
+                  <p>
+                    1. RCSB에 매일 업데이트 되는 구조를 Protein, Homo Sapiens 기준으로 확인 및 정리
+                    <br />
+                    2. 업데이트되는 데이터를 월별로 1700T 중복, ligand 결합 등을
+                    확인
+                    <br />
+                    3. 정리된 자료들을 도식화 및 데이터베이스 생성
+                  </p>
+                </div>
+              </div>
+              <div class="process">
+                <h3>For ADD</h3>
+                <h5>hover</h5>
+                <div class="process-hide">
+                  <p>
+                    1. RCSB 업데이트 자료로 1700T에 포합되지 않았던 화합물 구조 확보
+                    <br />
+                    2. DeepMatcher의 스크리닝 대상 확장, 구조 확인을 통한 적합한 모델 생성
+                  </p>
+                </div>
+              </div>
+              <div class="process">
+                <h3>For ADSP</h3>
+                <h5>hover</h5>
+                <div class="process-hide">
+                  <p>
+                    1. 최근 RCSB 업데이트 구조 확인
+                    <br />
+                    2. 연구 트랜드 파악 및 빠른 연구 개발 가능
+                  </p>
+                </div>
               </div>
             </div>
             <div class="row effect">
