--- a/html/board.html
+++ b/html/board.html
@@ -28,7 +28,7 @@
       </div>
       <!-- logo -->
       <a href="index.html">
-        <img src="img/ModelOfDeepMatcher_logo.png" alt="" id="home-img" />
+        <img src="img/mod_logo.png" alt="" id="home-img" />
       </a>
       <div class="loading">
         <span>L</span>
