--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="row navigator">
         <a href="index.html">
-          <img src="img/ModelOfDeepMatcher_logo.png" alt="" />
+          <img src="img/mod_logo.png" alt="" />
         </a>
         <div class="title">
           <!-- <h1>Model of DeepMatcher</h1> -->
