--- a/html/news.html
+++ b/html/news.html
@@ -128,16 +128,15 @@
           <div class="row down">
             <h3>Download Raw File</h3>
             <div class="row down-hide">
-              <a href="" download="">download</a>
+              <a href="#none" onclick="selectDown()">download</a>
               <select name="" id="select-data">
-                <option value="" selected>-</option>
-                <option value=""><a href="">All Data</a></option>
-                <option value=""><a href="">Jan 2023</a></option>
-                <option value=""><a href="">Feb 2023</a></option>
-                <option value=""><a href="">Mar 2023</a></option>
-                <option value=""><a href="">Apr 2023</a></option>
-                <option value=""><a href="">May 2023</a></option>
-                <option value=""><a href="">Jun 2023</a></option>
+                <option value=""><a href="./data/RCSB_released_2023_total.csv" download>All Data</a></option>
+                <option value=""><a href="./data/RCSB_released_2023_1.csv" download>Jan 2023</a></option>
+                <option value=""><a href="./data/RCSB_released_2023_2.csv" download>Feb 2023</a></option>
+                <option value=""><a href="./data/RCSB_released_2023_3.csv" download>Mar 2023</a></option>
+                <option value=""><a href="./data/RCSB_released_2023_4.csv" download>Apr 2023</a></option>
+                <option value=""><a href="./data/RCSB_released_2023_5.csv" download>May 2023</a></option>
+                <option value=""><a href="./data/RCSB_released_2023_6.csv" download>Jun 2023</a></option>
               </select>
             </div>
           </div>
