--- a/html/news.html
+++ b/html/news.html
@@ -128,7 +128,7 @@
           <div class="row down">
             <h3>Download Raw File</h3>
             <div class="row down-hide">
-              <a id="downloadCsv" href="#none">download</a>
+              <a id="downloadCsv" href="./data/RCSB_released_2023_total.csv">download</a>
               <select name="" id="select-data">
                 <option value="" onclick="selectDownAll()">All Data</option>
                 <option value="" onclick="selectDown1()">Jan 2023</option>
